--- a/metaproject/src/scss/03_components/_mp.navbar.scss
+++ b/metaproject/src/scss/03_components/_mp.navbar.scss
@@ -1,16 +1,110 @@
-#nav {
-    padding: 30px;
+nav {
+    padding: 20px;
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    box-sizing: border-box;
+    @include breakpoint('medium'){
+        padding: 30px;
+    }
 }
 
-.mp-navbar{
-    text-align: right;
+.mp-navbar__container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-#nav a {
-    @include font(20px, $black, 400, 1);
-    margin-left: 40px;
+.mp-navbar__logo{
+    @include font(15px, $white, 400, 1);
+    @include breakpoint('medium'){
+        @include font(20px, $white, 400, 1);
+    }
 }
 
-#nav a.router-link-exact-active {
-    color: #42b983;
+.mp-navbar__hamburger{
+    display: inline-flex;
+    height: 20px;
+    width: 30px;
+    position: relative;
+    cursor: pointer;
+    @include breakpoint('medium'){
+        display: none;
+    }
+    span{
+        width: 30px;
+        height: 2px;
+        background-color: $white;
+        position: absolute;
+        webkit-transition: .25s ease-in-out;
+        -moz-transition: .25s ease-in-out;
+        -o-transition: .25s ease-in-out;
+        transition: .25s ease-in-out;
+        &:nth-child(1){
+            top: 0;
+        }
+        &:nth-child(2){
+            top: 50%;
+            left: 0;
+            transform: translateY(-50%);
+        }
+        &:nth-child(3){
+            bottom: 0;
+        }
+    }
+    &.open{
+        span{
+            &:nth-child(1){
+                top: 10px;
+                -webkit-transform: rotate(135deg);
+                -moz-transform: rotate(135deg);
+                -o-transform: rotate(135deg);
+                transform: rotate(135deg);
+            }
+            &:nth-child(2){
+                opacity: 0;
+                left: -15px;
+            }
+            &:nth-child(3){
+                top: 10px;
+                -webkit-transform: rotate(-135deg);
+                -moz-transform: rotate(-135deg);
+                -o-transform: rotate(-135deg);
+                transform: rotate(-135deg);
+            }
+        }
+    }
+}
+
+.mp-navbar__link{
+    display: none;
+    @include breakpoint('medium'){
+        display: inline-flex;
+    }
+}
+
+.mp-navbar__link a {
+    @include breakpoint('medium'){
+        @include font(20px, $white, 400, 1);
+        margin-left: 30px;    
+        position: relative;
+    }
+    @include breakpoint('large'){
+        margin-left: 50px;
+    }
+}
+
+.mp-navbar__link a.router-link-exact-active, nav a:hover {
+   &:after{
+       content: '';
+       height: 15px;
+       width: 15px;
+       border-radius: 50%;
+       background-color: $red;
+       opacity: .85;
+       position: absolute;
+       left: 0;
+       bottom: 0;
+       transform: translate(-50%, 25%);
+   }
 }
