--- a/metaproject/src/scss/03_components/_mp.headerhome.scss
+++ b/metaproject/src/scss/03_components/_mp.headerhome.scss
@@ -6,7 +6,7 @@
     background-position: center;
     background-size: cover;
     position: relative;
-    &:after{
+    &:before{
         content: '';
         position: absolute;
         height: 100vh;
@@ -20,7 +20,6 @@
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
-    text-align: center;
 }
 
 .mp-headerhome__line{
@@ -54,7 +53,7 @@
 }
 @keyframes linescroll {
 	0% {
-        opacity: 0;
+        opacity: 1;
     }  
     10% {
         opacity: 1;
@@ -63,16 +62,17 @@
         height: 0px;
         opacity: 0;
     }
-    100% {
+    90% {
         opacity: 0;
+    }
+    100%{
+        opacity: 1;
     }
 }
 @keyframes mouse-wheel {
     0% {
-        opacity: 0;
-    }
-    20%{
-        opacity: 0;
+        height: 10px;
+        opacity: 1;
     }
     30%{
         height: 10px;
@@ -85,7 +85,10 @@
         height: 0px;
         opacity: 0;
     }
-    100% {
+    90% {
         opacity: 0;
+    }
+    100%{
+        opacity: 1;
     }
   }
