--- a/metaproject/src/scss/04_layout/_mp.headerhome.scss
+++ b/metaproject/src/scss/04_layout/_mp.headerhome.scss
@@ -1,7 +1,7 @@
 .mp-headerhome__bg{
     height: 100vh;
     width: 100vw;
-    background-image: url('../assets/header_home.jpeg');
+    background-image: url('../assets/SchoolOfAthens.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
