--- a/metaproject/src/scss/main.scss
+++ b/metaproject/src/scss/main.scss
@@ -1,6 +1,11 @@
 main{
     section{
         height: 100vh;
-        width: 100vw;
+        width: calc(100vw - 40px);
+        margin: auto;
+        display: table;
+        @include breakpoint('medium'){
+            width: calc(100vw - 60px);
+        }
     }
 }
