--- a/metaproject/src/scss/04_layout/_mp.currentyear.scss
+++ b/metaproject/src/scss/04_layout/_mp.currentyear.scss
@@ -17,6 +17,9 @@
     height: 50vh;
     padding: 75px 0 20px 0;
     @include breakpoint('medium'){
+        padding: 81px 0 30px 0;
+    }
+    @include breakpoint('large'){
         height: 100vh;
         padding: 0;
     }
