fix textproject mobile (less text)

--- a/metaproject/src/scss/04_layout/_mp.currentyear.scss
+++ b/metaproject/src/scss/04_layout/_mp.currentyear.scss
@@ -3,7 +3,7 @@
     width: 100vw;
     background-image: url('../assets/lambrate.jpg');
     background-repeat: no-repeat;
-    background-position: left center;
+    background-position: -150px center;
     background-size: cover;
     position: relative;
     @include breakpoint('medium'){
