--- a/metaproject/src/scss/03_components/_mp.textproject.scss
+++ b/metaproject/src/scss/03_components/_mp.textproject.scss
@@ -5,6 +5,9 @@
     @include breakpoint('medium'){
         padding: 0 30px;
     }
+    @include breakpoint('large'){
+        padding: 0 60px 0 120px;
+    }
 }
 .mp-textproject__header{
     margin-bottom: 15px;
