--- a/metaproject/src/scss/02_base/_mp.common.fonts.scss
+++ b/metaproject/src/scss/02_base/_mp.common.fonts.scss
@@ -1,23 +1,35 @@
 h2{
-    @include font(40px, false, 500, 1.3);
+    @include font(40px, false, 500, 1.1);
     @include breakpoint('medium'){
+        @include font(50px, false, 500, 1.2);
+    }
+    @include breakpoint('large'){
         @include font(70px, false, 500, 1.3);
     }
 }
 h3{
-    @include font(30px, false, 400, 1.3);
+    @include font(30px, false, 400, 1.1);
     @include breakpoint('medium'){
+        @include font(40px, false, 400, 1.2);
+    }
+    @include breakpoint('large'){
         @include font(50px, false, 400, 1.3);
     }
 }
 p{
     @include font(15px, false, 400, 1.3);
     @include breakpoint('medium'){
+        @include font(18px, false, 400, 1.3);
+    }
+    @include breakpoint('large'){
         @include font(20px, false, 400, 1.3);
     }
     span{
         @include font(15px, false, 500, 1.3);
         @include breakpoint('medium'){
+            @include font(18px, false, 500, 1.3);
+        }
+        @include breakpoint('large'){
             @include font(20px, false, 500, 1.3);
         }
     }
