--- a/metaproject/src/scss/04_layout/_mp.currentyear.scss
+++ b/metaproject/src/scss/04_layout/_mp.currentyear.scss
@@ -15,6 +15,7 @@
     color: $white;
     display: table;
     height: 50vh;
+    width: 100%;
     padding: 75px 0 20px 0;
     @include breakpoint('medium'){
         padding: 81px 0 30px 0;
