--- a/metaproject/src/scss/04_layout/_mp.navbar.scss
+++ b/metaproject/src/scss/04_layout/_mp.navbar.scss
@@ -1,11 +1,14 @@
 nav {
     padding: 20px;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     box-sizing: border-box;
     @include breakpoint('medium'){
         padding: 30px;
+    }
+    @include breakpoint('large'){
+        padding: 30px 120px;
     }
 }
 
