--- a/metaproject/src/scss/main.scss
+++ b/metaproject/src/scss/main.scss
@@ -7,5 +7,8 @@ main{
         @include breakpoint('medium'){
             width: calc(100vw - 60px);
         }
+        @include breakpoint('medium'){
+            width: calc(100vw - 240px);
+        }
     }
 }
