--- a/metaproject/src/scss/04_layout/_mp.introtext.scss
+++ b/metaproject/src/scss/04_layout/_mp.introtext.scss
@@ -1,7 +1,16 @@
-.mp-introtext__container{
-    display: table-cell;
-    vertical-align: middle;
+.mp-introtext{
     color: $black;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+    @include breakpoint('medium'){
+        padding: 0 60px;
+    }
+    @include breakpoint('large'){
+        padding: 0 120px;
+    }
 }
 .mp-introtext__header{
     margin-bottom: 15px;
