--- a/metaproject/src/scss/04_layout/_mp.slides.scss
+++ b/metaproject/src/scss/04_layout/_mp.slides.scss
@@ -1,13 +1,16 @@
 .mp-slider{
     height: 100vh;
     width: 100vw;
-    margin: 0;
     @include breakpoint('large'){
         padding-left: 60px;
     }
+    &.row{
+        margin: 0;
+    }
 }
 .mp-slider__img{
-    display: table;
+    display: flex;
+    align-items: center;
     height: 45vh;
     width: 100%;
     padding: 75px 0 20px 0;
@@ -37,7 +40,8 @@
     background-image: url('../assets/slider2017.jpg')
 }
 .mp-slider__text{
-    display: table;
+    display: flex;
+    align-items: center;
     height: 55vh;
     width: 100%;
     position: relative;
