--- a/metaproject/src/scss/02_base/_mp.common.fonts.scss
+++ b/metaproject/src/scss/02_base/_mp.common.fonts.scss
@@ -16,7 +16,16 @@ h3{
         @include font(50px, false, 400, 1.3);
     }
 }
-p{
+h4{
+    @include font(20px, false, 400, 1.1);
+    @include breakpoint('medium'){
+        @include font(23px, false, 400, 1.2);
+    }
+    @include breakpoint('large'){
+        @include font(25px, false, 400, 1.3);
+    }
+}
+a, p{
     @include font(15px, false, 400, 1.3);
     @include breakpoint('medium'){
         @include font(18px, false, 400, 1.3);
