--- a/metaproject/src/scss/02_base/_mp.common.fonts.scss
+++ b/metaproject/src/scss/02_base/_mp.common.fonts.scss
@@ -24,6 +24,23 @@ h4{
     @include breakpoint('large'){
         @include font(25px, false, 400, 1.3);
     }
+    &.mp-h4--with-line{
+        position: relative;
+        margin-bottom: 10px;
+        &:before{
+            content: '';
+            height: 2px;
+            width: 20px;
+            background: $white;
+            position: absolute;
+            top: 50%;
+            left: -30px;
+            @include breakpoint('medium'){
+                width: 30px;
+                left: -40px;
+            }
+        }
+    }
 }
 a, p{
     @include font(15px, false, 400, 1.3);
