--- a/metaproject/src/scss/03_components/_mp.textproject.scss
+++ b/metaproject/src/scss/03_components/_mp.textproject.scss
@@ -1,9 +1,9 @@
 .mp-textproject{
     padding: 0 20px;
     @include breakpoint('medium'){
-        padding: 0 30px;
+        padding: 0 30px 0 60px;
     }
-    @include breakpoint('large'){
+    @include breakpoint('xlarge'){
         padding: 0 60px 0 120px;
     }
 }
