--- a/metaproject/src/scss/04_layout/_mp.introtext.scss
+++ b/metaproject/src/scss/04_layout/_mp.introtext.scss
@@ -8,7 +8,7 @@
     @include breakpoint('medium'){
         padding: 0 60px;
     }
-    @include breakpoint('large'){
+    @include breakpoint('xlarge'){
         padding: 0 120px;
     }
 }
