--- a/metaproject/src/scss/04_layout/_mp.navbar.scss
+++ b/metaproject/src/scss/04_layout/_mp.navbar.scss
@@ -5,9 +5,9 @@ nav {
     width: 100%;
     box-sizing: border-box;
     @include breakpoint('medium'){
-        padding: 30px;
+        padding: 30px 60px;
     }
-    @include breakpoint('large'){
+    @include breakpoint('xlarge'){
         padding: 30px 120px;
     }
 }
@@ -30,7 +30,7 @@ nav {
         .mp-navbar__logo{
             color: $black;
         }
-        .mp-navbar__logo.open{
+        .mp-navbar__logo--mobile.open{
             color: $white;
         }
         @include breakpoint('medium'){
@@ -42,11 +42,23 @@ nav {
 }
 
 .mp-navbar__logo{
-    @include font(15px, $white, 400, 1);
-    z-index: 999;
-    @include breakpoint('medium'){
-        @include font(20px, false, 400, 1);
+    display: none;
+    @include breakpoint('large'){
+        display: block;
+        @include font(18px, $white, 400, 1);
+        z-index: 999;
         transition: .2s color ease-in-out;
+    }
+    @include breakpoint('xlarge'){
+        @include font(20px, false, 400, 1);
+    }
+}
+.mp-navbar__logo--mobile{
+    display: block;
+    @include font(20px, $white, 400, 1);
+    z-index: 999;
+    @include breakpoint('large'){
+        display: none;
     }
 }
 
@@ -147,16 +159,17 @@ nav {
     margin-bottom: 30px;
     position: relative;
     @include breakpoint('medium'){
-        @include font(20px, false, 400, 1);  
+        @include font(18px, false, 400, 1);
         transition: .2s color ease-in-out;
         margin-bottom: 0;
-        margin-left: 25px;
+        margin-left: 20px;
         display: inline-flex;
         &:first-child{
             margin: 0;
         }
     }
     @include breakpoint('large'){
+        font-size: 20px;
         margin-left: 50px;
     }
     &:after{
