--- a/metaproject/src/scss/04_layout/_mp.footer.scss
+++ b/metaproject/src/scss/04_layout/_mp.footer.scss
@@ -22,6 +22,17 @@
         margin-left: 0;
     }
 }
+.mp-footer__contact-item{
+    margin-top: 15px;
+    @include breakpoint('medium'){
+        margin-top: 0;
+        margin-left: 20px;
+    }
+    &:first-child{
+        margin-top: 0;
+        margin-left: 0;
+    }
+}
 .mp-footer__copyright{
     @include font(10px, false, 400, 1.3);
     position: absolute;
