neumorphism for hamburger menu button

--- a/metaproject/src/scss/04_layout/_mp.navbar.scss
+++ b/metaproject/src/scss/04_layout/_mp.navbar.scss
@@ -67,15 +67,15 @@ nav {
 
 .mp-navbar__hamburger{
     display: inline-flex;
-    height: 35px;
-    width: 35px;
+    height: 45px;
+    width: 45px;
     position: relative;
     cursor: pointer;
     z-index: 999;
     border-radius: 50%;
     background: linear-gradient(315deg, #bf0510, #e30513);
     box-shadow:  -1px -1px 1px #b4040f, 1px 1px 1px #f40615;
-    transition: all .15s ease-in-out;
+    transition: all .1s ease-in-out;
     @include breakpoint('medium'){
         display: none;
     }
@@ -94,25 +94,25 @@ nav {
         -o-transition: .25s ease-in-out;
         transition: .25s ease-in-out;
         &:nth-child(1){
-            top: 15px;
+            top: 17px;
         }
         &:nth-child(2){
-            bottom: 15px;
+            bottom: 17px;
         }
     }
     &.open{
         background: linear-gradient(315deg, #e30513, #bf0510);
-        box-shadow:  0 0 0.5px #b4040f, 0 0 0.5px #f40615;
+        box-shadow: 3px 3px 3px #b4040f, 3px 3px 3px #f40615;
         span{
             &:nth-child(1){
-                top: 17px;
+                top: 22.5px;
                 -webkit-transform: translateX(-50%)rotate(135deg);
                 -moz-transform: translateX(-50%)rotate(135deg);
                 -o-transform: translateX(-50%)rotate(135deg);
                 transform: translateX(-50%)rotate(135deg);
             }
             &:nth-child(2){
-                top: 17px;
+                top: 22.5px;
                 -webkit-transform: translateX(-50%)rotate(-135deg);
                 -moz-transform: translateX(-50%)rotate(-135deg);
                 -o-transform: translateX(-50%)rotate(-135deg);
@@ -126,7 +126,7 @@ nav {
     position: absolute;
     top: -100vh;
     left: 0;
-    background: $black;
+    background: $red;
     height: 100vh;
     width: 100vw;
     transition: .5s ease all;
@@ -147,6 +147,7 @@ nav {
     position: absolute;
     top: 50%;
     left: 50%;
+    transition: all 0.5s ease-in-out;
     transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%);
     -moz-transform: translate(-50%, -50%);
@@ -162,7 +163,7 @@ nav {
 
 .mp-navbar__link a {
     display: block;
-    @include font(50px, $white, 400, 1);
+    @include font(50px, $white, 500, 1);
     margin-bottom: 30px;
     position: relative;
     @include breakpoint('medium'){
@@ -185,10 +186,7 @@ nav {
 }
 
 .mp-navbar__link a.router-link-exact-active, nav a:hover {
-    color: $red;
-    @include breakpoint('medium'){
-        color: $white;
-    }
+    color: $white;
     &:after{
         content: '';
         height: 15px;
