--- a/metaproject/src/scss/02_base/_mp.common.fonts.scss
+++ b/metaproject/src/scss/02_base/_mp.common.fonts.scss
@@ -32,6 +32,7 @@ h4{
             height: 2px;
             width: 20px;
             background: $white;
+            mix-blend-mode: difference;
             position: absolute;
             top: 50%;
             left: -30px;
