hide scrollbar from all browser

--- a/metaproject/src/scss/main.scss
+++ b/metaproject/src/scss/main.scss
@@ -1,3 +1,10 @@
+html{
+    -ms-overflow-style: none;  // IE 10+
+    overflow: -moz-scrollbars-none;  // Firefox
+    &::-webkit-scrollbar{
+        display: none;
+    }
+}
 main{
     section{
         height: 100vh;
