--- a/metaproject/src/scss/04_layout/_mp.slides.scss
+++ b/metaproject/src/scss/04_layout/_mp.slides.scss
@@ -58,28 +58,6 @@
         }
     }
 }
-.mp-slider__pagination{
-    @include font(15px, #BFBFBF, 400, 1.3);
-    position: absolute;
-    top: 13px;
-    right: 60px;
-    @include breakpoint('medium'){
-        @include font(30px, #BFBFBF, 400, 1.3);
-        top: unset;
-        bottom: 30px;
-        right: 60px;
-        padding: 0;
-    }
-    @include breakpoint('large'){
-        right: 120px;
-    }
-    span{
-        @include font(20px, $red, 500, 1.3);
-        @include breakpoint('medium'){
-            @include font(50px, $red, 500, 1.3);
-        }
-    }
-}
 .swiper-wrapper{
     width: 100vw;
 }
@@ -110,5 +88,32 @@
         width: 60px;
         top: 0;
         bottom: unset;
+    }
+}
+.swiper-pagination.swiper-pagination-bullets{
+    left: unset;
+    right: 0;
+    text-align: right;
+    padding-right: 60px;
+    @include breakpoint('large'){
+        padding-right: 120px;
+    }
+}
+span.swiper-pagination-bullet{
+    height: 20px;
+    width: 20px;
+    background: linear-gradient(145deg, #e6e6e6, #ffffff);
+    box-shadow: 2px 2px 2px #ffffff, -2px -2px 2px #d6d6d6;
+    opacity: 1;
+    &-active{
+        box-shadow: 1px 1px 1px #d6d6d6, -1px -1px 1px #ffffff;
+    }
+    @include breakpoint('large'){
+        height: 30px;
+        width: 30px;
+    }
+    @include breakpoint('xlarge'){
+        height: 40px;
+        width: 40px;
     }
 }
