--- a/metaproject/src/scss/04_layout/_mp.slides.scss
+++ b/metaproject/src/scss/04_layout/_mp.slides.scss
@@ -62,58 +62,25 @@
     width: 100vw;
 }
 .swiper-button-prev{
-    height: 55vh;
     background: none;
-    margin-top: 0;
-    top: unset;
-    bottom: 0;
-    left: 0;
-    @include breakpoint('large'){
-        height: 100vh;
-        width: 60px;
-        top: 0;
-        bottom: unset;
-    }
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 15px 19.6px 15px 0;
+    border-color: transparent #000000 transparent transparent;
+    line-height: 0px;
+    _border-color: #ffffff #000000 #ffffff #ffffff;
+    _filter: progid:DXImageTransform.Microsoft.Chroma(color='#ffffff');
 }
 .swiper-button-next{
-    height: 55vh;
-    width: 30px;
-    background: #D9DADB;
-    margin-top: 0;
-    top: unset;
-    bottom: 0;
-    right: 0;
-    @include breakpoint('large'){
-        height: 100vh;
-        width: 60px;
-        top: 0;
-        bottom: unset;
-    }
-}
-.swiper-pagination.swiper-pagination-bullets{
-    left: unset;
-    right: 0;
-    text-align: right;
-    padding-right: 60px;
-    @include breakpoint('large'){
-        padding-right: 120px;
-    }
-}
-span.swiper-pagination-bullet{
-    height: 20px;
-    width: 20px;
-    background: linear-gradient(145deg, #e6e6e6, #ffffff);
-    box-shadow: 2px 2px 2px #ffffff, -2px -2px 2px #d6d6d6;
-    opacity: 1;
-    &-active{
-        box-shadow: 1px 1px 1px #d6d6d6, -1px -1px 1px #ffffff;
-    }
-    @include breakpoint('large'){
-        height: 30px;
-        width: 30px;
-    }
-    @include breakpoint('xlarge'){
-        height: 40px;
-        width: 40px;
-    }
+    background: none;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 15px 0 15px 19.6px;
+    border-color: transparent transparent transparent $black;
+    line-height: 0;
+    _border-color: #ffffff #000000 #ffffff #ffffff;
+    _filter: progid:DXImageTransform.Microsoft.Chroma(color='#ffffff');
+     
 }
