--- a/metaproject/src/scss/04_layout/_mp.introproject.scss
+++ b/metaproject/src/scss/04_layout/_mp.introproject.scss
@@ -9,14 +9,14 @@
 	height: 25vh;
 	padding: 80px 20px 0 50px;
 	@include breakpoint('medium'){
-		padding: 100px 60px 0;
+		padding: 100px 0 0 60px;
 	}
 	@include breakpoint('large'){
 		height: 60vh;
 		max-width: 45vw;
 	}
 	@include breakpoint('xlarge'){
-		padding: 100px 120px 0;
+		padding: 100px 0 0 120px;
 	}
 }
 .mp-introproject__wrapper-numbers{
