--- a/metaproject/src/scss/02_base/_mp.common.fonts.scss
+++ b/metaproject/src/scss/02_base/_mp.common.fonts.scss
@@ -34,6 +34,7 @@ h4{
             content: '';
             height: 2px;
             width: 20px;
+            border-radius: 5px;
             background: $white;
             mix-blend-mode: difference;
             position: absolute;
