--- a/metaproject/src/scss/04_layout/_mp.headerhome.scss
+++ b/metaproject/src/scss/04_layout/_mp.headerhome.scss
@@ -1,7 +1,23 @@
 .mp-headerhome__bg{
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
+    position: relative;
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
+}
+.mp-headerhome__wrapper-video{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    video{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        min-height: 100%;
+        min-width: 100%;
+    }
 }
