--- a/metaproject/src/scss/04_layout/_mp.partners.scss
+++ b/metaproject/src/scss/04_layout/_mp.partners.scss
@@ -13,19 +13,29 @@
 }
 .mp-partners__wrapper-text{
     color: $white;
-    margin-bottom: 20px;
 }
 .wd-partners__wrapper-logos{
-    height: 100%;
+    height: 70%;
+    align-items: center;
+    justify-content: left;
+    @include breakpoint('large'){
+        height: 100%;
+    }
 }
 .mp-partners__logo-box{
     width: 100%;
-    height: calc(100%/9);
-    margin-bottom: calc((100%/9)/2);
+    height: calc(100%/5);
+    max-height: 50px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    @include breakpoint('medium'){
+        max-height: 100px;
+    }
     @include breakpoint('large'){
         width: 100%;
-        height: calc(100%/5);
-        margin-bottom: calc((100%/5)/2);
+        height: calc(100%/3);
+        justify-content: center;
     }
 }
 .mp-partners__logo-img{
@@ -33,11 +43,13 @@
     height: 100%;
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: left;
+    background-position: left center;
     @include breakpoint('medium'){
         height: 40%;
         width: 100%;
-        background-position: right;
+    }
+    @include breakpoint('large'){
+        background-position: center;
     }
     &--tonki{
         background-image: url('../assets/loghi/tonki.png');
