--- a/metaproject/src/scss/04_layout/_mp.headerhome.scss
+++ b/metaproject/src/scss/04_layout/_mp.headerhome.scss
@@ -12,6 +12,18 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    &--desktop{
+        display: none;
+        @include breakpoint('medium'){
+            display: block
+        }
+    }
+    &--mobile{
+        display: block;
+        @include breakpoint('medium'){
+            display: none;
+        }
+    }
     video{
         position: absolute;
         top: 50%;
