--- a/metaproject/src/scss/04_layout/_mp.slides.scss
+++ b/metaproject/src/scss/04_layout/_mp.slides.scss
@@ -67,10 +67,15 @@
     height: 0;
     border-style: solid;
     border-width: 15px 19.6px 15px 0;
-    border-color: transparent #000000 transparent transparent;
+    border-color: transparent $grey transparent transparent;
     line-height: 0px;
-    _border-color: #ffffff #000000 #ffffff #ffffff;
+    _border-color: $white $grey $white $white;
     _filter: progid:DXImageTransform.Microsoft.Chroma(color='#ffffff');
+    transition: all .3s ease-in-out;
+    &:hover{
+        border-color: transparent $black transparent transparent;
+        _border-color: $white $black $white $white;
+    }
 }
 .swiper-button-next{
     background: none;
@@ -78,9 +83,14 @@
     height: 0;
     border-style: solid;
     border-width: 15px 0 15px 19.6px;
-    border-color: transparent transparent transparent $black;
+    border-color: transparent transparent transparent $grey;
     line-height: 0;
-    _border-color: #ffffff #000000 #ffffff #ffffff;
-    _filter: progid:DXImageTransform.Microsoft.Chroma(color='#ffffff');
+    _border-color: $white $grey $white $white;
+    _filter: progid:DXImageTransform.Microsoft.Chroma(color='$white');
+    transition: all .3s ease-in-out;
+    &:hover{
+        border-color: transparent transparent transparent $black;
+        _border-color: $white $black $white $white;
+    }
      
 }
